tests/generics/instantiation_bound_violations.err.expected
error: at 16:22: [TC-InvalidDeclaredType] In struct 'WrongArity1', field 'field': Type 'Box' expects 1 type argument(s), got 2
    |
 16 | struct WrongArity1 { field: Box<i32, bool> }
    |                      ^^^^^^^^^^^^^^^^^^^^^
error: at 17:22: [TC-InvalidDeclaredType] In struct 'WrongArity2', field 'field': Type 'Box' expects 1 type argument(s), got 0
    |
 17 | struct WrongArity2 { field: Box }
    |                      ^^^^^^^^^^
error: at 20:21: [TC-InvalidDeclaredType] In struct 'UsesBadBox', field 'field': Type argument Linear for 'Box::T' does not satisfy required bound 'Copy'
    |
 20 | struct UsesBadBox { field: Box<Linear> }
    |                     ^^^^^^^^^^^^^^^^^^
error: at 23:9: [TC-InvalidDeclaredType] In function 'take', parameter 'b': Type argument Linear for 'Box::T' does not satisfy required bound 'Copy'
    |
 23 | fn take(b: Box<Linear>) {
    |         ^^^^^^^^^^^^^^
